# minino-esp32-csi-node-ruview

./: CMakeLists.txt  HARDWARE_SUPPORT.md  MIGRATION_SUMMARY.md  MININO-Requirements.md  MININO_MIGRATION.md  README.md  build_minino.sh  flash_minino.sh  idf_component.yml  partitions_4mb.csv  partitions_minino.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.minino
components/minino_bsp/: CMakeLists.txt  minino_bsp.c
components/minino_bsp/include/: minino_bsp.h
main/: CMakeLists.txt  csi_collector.c  display_hal.c  main.c  main.h  rvf_parser.c
